# youtrack-updater

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  youtrack-updater.py  youtrack_updater.py
.github/workflows/: publish.yml
